--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-constants": "^17.0.5",
     "expo-font": "^13.0.3",
     "expo-haptics": "^14.0.1",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
     "expo-router": "4.0.17",
@@ -32,6 +33,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-date-picker": "^5.0.10",
     "react-native-gesture-handler": "^2.23.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
@@ -40,8 +42,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
-    "zustand": "^4.5.2",
-    "expo-image-picker": "~16.0.6"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
